Fix visual wrapping anomoly that happens only when certain nav elements are selected.

--- a/bemani/frontend/static/site.css
+++ b/bemani/frontend/static/site.css
@@ -184,9 +184,9 @@ ul.navigation li a:active {
 }
 
 ul.navigation > li > a.current {
-    border-bottom-width: 2px;
+    border-bottom-width: 1.6px;
     border-bottom-style: solid;
-    padding-bottom: 8px;
+    padding-bottom: 8.4px;
 }
 
 ul.navigation > li > ul.navigation_sub > li > a.current {
